--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="assets/css/icofont.min.css">
     <link rel="stylesheet" href="assets/css/nice-select.css">
     <link rel="stylesheet" href="assets/css/animate-headline.css">
+    <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
     <!--====== Default css ======-->
     <link rel="stylesheet" href="assets/css/default.css">
     <!--====== style css ======-->
@@ -137,7 +138,12 @@
                                         <div class="log-inpagess">
                                             <div class="login-content">
                                                 <h4>Join to Start Learning</h4>
-
+                                                <div class="connect-facebook">
+                                                    <span>
+                                                        <a href=""><i class="fa fa-facebook-f"></i>Log In with
+                                                            facebook</a>
+                                                    </span>
+                                                </div>
                                                 <div class="loginforms1">
                                                     <form action="">
                                                         <div class="login-us">
@@ -145,7 +151,6 @@
                                                             <input type="email" placeholder="Email">
                                                             <input type="number" placeholder="Phone Number">
                                                             <input type="password" placeholder="Set Password">
-                                                            <input type="password" placeholder="Confirm Password">
                                                         </div>
                                                     </form>
                                                 </div>
@@ -199,15 +204,14 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-10 text-center">
-                    <h2 class="title cd-headline clip is-full-width">Learn Mobile
+                    <h2 class="title">Now learn at your own table</h2>
+                    <h4 class="sub-title cd-headline clip is-full-width">Time will save, learning will be easier
                         <span class="cd-words-wrapper">
-                            <b class="is-visible">App Desing</b>
+                            <b class="is-visible">Mobile App Desing</b>
                             <b>PSD Desing</b>
                             <b>Template Desing</b>
                             <b>Ux Design</b>
-                        </span>
-                    </h2>
-                    <h4 class="sub-title">join with industry expert and Start learning <span>at home</span></h4>
+                        </span></h4>
                 </div>
             </div>
         </div>
@@ -259,7 +263,7 @@
                             <h4 class="title">Learn Mobile App Design</h4>
                         </a>
                         <p>Learn Mobile App Design with real project
-                            and build your career</p>
+                            and copyright &copy; 2020 UX Club Bangladesh</p>
                         <span class="course-meta">
                             <i class="fa fa-exclamation-circle" aria-hidden="true"></i> 30
                             Class with Project
@@ -331,7 +335,7 @@
                             <a href="#">
                                 <h2 class="title">Best community for you</h2>
                             </a>
-                            <p>Join to be expert and build your career</p>
+                            <p>Join to be expert and copyright &copy; 2020 UX Club Bangladesh</p>
                         </div>
                     </div>
                 </div>
@@ -373,13 +377,13 @@
                             <img src="assets/images/footer-logo.png" alt="">
                         </a>
                         <div class="tagline">
-                            <h4>Join to be Expert<span>Build your career</span></h4>
+                            <h4>Join to be Expert<span>copyright &copy; 2020 UX Club Bangladesh</span></h4>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6 my-auto">
                     <div class="footer-right">
-                        <a href="tel:01743196240" class="call-button"><span>Call for Help</span> : 01743 196 240</a>
+                        <a href="tel:01743196240" class="call-button"><span>Have any question?</span> : 01743 196 240</a>
                         <a href="#" class="fb-button"><span>Join us on</span> facebook</a>
                     </div>
                 </div>
@@ -395,6 +399,7 @@
     <script src="assets/js/jquery.nice-select.min.js"></script>
     <script src="assets/js/lightcase.js"></script>
     <script src="assets/js/animate-headline.js"></script>
+    <script src="assets/js/owl.carousel.min.js"></script>
     <!--========= main js =========-->
     <script src="assets/js/main.js"></script>
 </body>
