--- a/inner-page-after.html
+++ b/inner-page-after.html
@@ -21,6 +21,8 @@
     <link rel="stylesheet" href="assets/css/icofont.min.css">
     <link rel="stylesheet" href="assets/css/nice-select.css">
     <link rel="stylesheet" href="assets/css/lightcase.css">
+    <link rel="stylesheet" href="assets/css/animate-headline.css">
+    <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
     <!--====== Default css ======-->
     <link rel="stylesheet" href="assets/css/default.css">
     <!--====== style css ======-->
@@ -215,7 +217,7 @@
                                 <li><i class="icofont-star"></i> Based on Professional Guide</li>
                                 <li><i class="icofont-coffee-cup"></i> Course for Beginner</li>
                                 <li><i class="icofont-badge"></i> Includes certificate on this course</li>
-                                <li><i class="icofont-notification"></i> Fee Tk. 3000</li>
+                                <li><i class="icofont-taka"></i> Fee Tk. 3000</li>
                             </ul>
                             <a href="#" class="site-btn course" data-toggle="modal"
                                 data-target="#exampleModalCenter3">Get full Course</a>
@@ -318,18 +320,19 @@
                             <h4>Start Learning</h4>
                             <span>22 Video Class</span>
                         </div>
-                        <div class="accordion course" id="courseExample">
-                            <div class="card">
-                                <div class="card-header" id="coursHeadingOne">
-                                    <h5 class="mb-0 subtitle">
-                                        <button class="btn btn-link" type="button" data-toggle="collapse"
-                                            data-target="#curseOne" aria-expanded="false" aria-controls="curseOne">
+                        <div class="panel-group accordion course" id="accordion" role="tablist"
+                            aria-multiselectable="true">
+                            <div class="panel panel-default card">
+                                <div class="panel-heading" role="tab" id="coursHeadingOne">
+                                    <h4 class="panel-title subtitle">
+                                        <a class="btn btn-link" role="button" data-toggle="collapse" href="#curseOne"
+                                            aria-expanded="true" aria-controls="curseOne">
                                             Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                        </button>
-                                    </h5>
+                                        </a>
+                                    </h4>
                                 </div>
-                                <div id="curseOne" class="collapse" aria-labelledby="coursHeadingOne"
-                                    data-parent="#courseExample">
+                                <div id="curseOne" class="panel-collapse collapse in show" role="tabpanel"
+                                    aria-labelledby="coursHeadingOne">
                                     <div class="card-body">
                                         <div class="course-videos">
                                             <div class="single-videos">
@@ -344,7 +347,7 @@
                                                             5:07min</span>
                                                     </div>
                                                 </div>
-
+                                                 
                                             </div>
                                             <div class="single-videos">
                                                 <div class="single-video-left">
@@ -392,17 +395,17 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="card">
-                                <div class="card-header" id="coursHeadingTwo">
-                                    <h5 class="mb-0 subtitle">
-                                        <button class="btn btn-link" type="button" data-toggle="collapse"
-                                            data-target="#courseTwo" aria-expanded="false" aria-controls="courseTwo">
+                            <div class="panel panel-default card">
+                                <div class="panel-heading" role="tab" id="coursHeadingTwo">
+                                    <h4 class="panel-title subtitle">
+                                        <a class="btn btn-link" role="button" data-toggle="collapse" href="#curseTwo"
+                                            aria-expanded="true" aria-controls="curseTwo">
                                             Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                        </button>
-                                    </h5>
+                                        </a>
+                                    </h4>
                                 </div>
-                                <div id="courseTwo" class="collapse" aria-labelledby="coursHeadingTwo"
-                                    data-parent="#courseExample">
+                                <div id="curseTwo" class="panel-collapse collapse in show" role="tabpanel"
+                                    aria-labelledby="coursHeadingTwo">
                                     <div class="card-body">
                                         <div class="course-videos">
                                             <div class="single-videos">
@@ -423,17 +426,17 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="card">
-                                <div class="card-header" id="coursHeadingThree">
-                                    <h5 class="mb-0 subtitle">
-                                        <button class="btn btn-link" type="button" data-toggle="collapse"
-                                            data-target="#curseThree" aria-expanded="false" aria-controls="curseThree">
+                            <div class="panel panel-default card">
+                                <div class="panel-heading" role="tab" id="coursHeadingThree">
+                                    <h4 class="panel-title subtitle">
+                                        <a class="btn btn-link" role="button" data-toggle="collapse" href="#curseThree"
+                                            aria-expanded="true" aria-controls="curseThree">
                                             Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                        </button>
-                                    </h5>
+                                        </a>
+                                    </h4>
                                 </div>
-                                <div id="curseThree" class="collapse" aria-labelledby="coursHeadingThree"
-                                    data-parent="#courseExample">
+                                <div id="curseThree" class="panel-collapse collapse in show" role="tabpanel"
+                                    aria-labelledby="coursHeadingThree">
                                     <div class="card-body">
                                         <div class="course-videos">
                                             <div class="single-videos">
@@ -454,48 +457,17 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="card">
-                                <div class="card-header" id="headingFour">
-                                    <h5 class="mb-0 subtitle">
-                                        <button class="btn btn-link" type="button" data-toggle="collapse"
-                                            data-target="#curseFour" aria-expanded="false" aria-controls="curseOne">
+                            <div class="panel panel-default card">
+                                <div class="panel-heading" role="tab" id="coursHeadingFour">
+                                    <h4 class="panel-title subtitle">
+                                        <a class="btn btn-link" role="button" data-toggle="collapse" href="#curseFour"
+                                            aria-expanded="true" aria-controls="curseFour">
                                             Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                        </button>
-                                    </h5>
+                                        </a>
+                                    </h4>
                                 </div>
-                                <div id="curseFour" class="collapse" aria-labelledby="headingFour"
-                                    data-parent="#courseExample">
-                                    <div class="card-body">
-                                        <div class="course-videos">
-                                            <div class="single-videos">
-                                                <div class="single-video-left">
-                                                    <a href="#" class="play-btn"><i class="icofont-play-alt-1"></i></a>
-                                                    <div class="content">
-                                                        <a href="#">
-                                                            <h5 class="title">Learn all the Basic tools of Photoshop for
-                                                                UI Design</h5>
-                                                        </a>
-                                                        <span class="video-duratio"><i class="icofont-clock-time"></i>
-                                                            5:07min</span>
-                                                    </div>
-                                                </div>
-                                                 
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="card">
-                                <div class="card-header" id="headingFive">
-                                    <h5 class="mb-0 subtitle">
-                                        <button class="btn btn-link" type="button" data-toggle="collapse"
-                                            data-target="#curseFive" aria-expanded="false" aria-controls="curseFive">
-                                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                        </button>
-                                    </h5>
-                                </div>
-                                <div id="curseFive" class="collapse" aria-labelledby="headingFive"
-                                    data-parent="#courseExample">
+                                <div id="curseFour" class="panel-collapse collapse in show" role="tabpanel"
+                                    aria-labelledby="coursHeadingFour">
                                     <div class="card-body">
                                         <div class="course-videos">
                                             <div class="single-videos">
@@ -657,13 +629,13 @@
                             <img src="assets/images/footer-logo.png" alt="">
                         </a>
                         <div class="tagline">
-                            <h4>Join to be Expert<span>Build your career</span></h4>
+                            <h4>Join to be Expert<span>copyright &copy; 2020 UX Club Bangladesh</span></h4>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6 my-auto">
                     <div class="footer-right">
-                        <a href="tel:01743196240" class="call-button"><span>Call for Help</span> : 01743 196 240</a>
+                        <a href="tel:01743196240" class="call-button"><span>Have any question?</span> : 01743 196 240</a>
                         <a href="#" class="fb-button"><span>Join us on</span> facebook</a>
                     </div>
                 </div>
@@ -678,6 +650,8 @@
     <!--========= meanmenu js =========-->
     <script src="assets/js/jquery.nice-select.min.js"></script>
     <script src="assets/js/lightcase.js"></script>
+    <script src="assets/js/animate-headline.js"></script>
+    <script src="assets/js/owl.carousel.min.js"></script>
     <!--========= main js =========-->
     <script src="assets/js/main.js"></script>
 </body>
