--- a/profile-1.html
+++ b/profile-1.html
@@ -20,7 +20,8 @@
 <link rel="stylesheet" href="assets/css/font-awesome.min.css">
 <link rel="stylesheet" href="assets/css/icofont.min.css">
 <link rel="stylesheet" href="assets/css/nice-select.css">
-<link rel="stylesheet" href="assets/css/lightcase.css">
+<link rel="stylesheet" href="assets/css/animate-headline.css">
+<link rel="stylesheet" href="assets/css/owl.carousel.min.css">
 <!--====== Default css ======-->
 <link rel="stylesheet" href="assets/css/default.css">
 <!--====== style css ======-->
@@ -252,19 +253,85 @@
                             <img src="assets/images/footer-logo.png" alt="">
                         </a>
                         <div class="tagline">
-                            <h4>Join to be Expert<span>Build your career</span></h4>
+                            <h4>Join to be Expert<span>copyright &copy; 2020 UX Club Bangladesh</span></h4>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6 my-auto">
                     <div class="footer-right">
-                        <a href="tel:01743196240" class="call-button"><span>Call for Help</span> : 01743 196 240</a>
+                        <a href="tel:01743196240" class="call-button"><span>Have any question?</span> : 01743 196 240</a>
                         <a href="#" class="fb-button"><span>Join us on</span> facebook</a>
                     </div>
                 </div>
             </div>
         </div>
     </footer>
+
+    <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+        <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="headingOne">
+                <h4 class="panel-title">
+                    <a role="button" data-toggle="collapse" href="#collapseOne" aria-expanded="true"
+                        aria-controls="collapseOne">
+                        Collapsible Group Item #1
+                    </a>
+                </h4>
+            </div>
+            <div id="collapseOne" class="panel-collapse collapse in show" role="tabpanel" aria-labelledby="headingOne">
+                <div class="panel-body">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
+                    richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck
+                    quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put
+                    a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh
+                    helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur
+                    butcher vice lomo. Leggings occaecat craft beer farm-to-table,
+                    raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable
+                    VHS.</div>
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="headingTwo">
+                <h4 class="panel-title">
+                    <a class="collapsed" role="button" data-toggle="collapse" href="#collapseTwo" aria-expanded="false"
+                        aria-controls="collapseTwo">
+                        Collapsible Group Item #2
+                    </a>
+                </h4>
+
+            </div>
+            <div id="collapseTwo" class="panel-collapse collapse in show" role="tabpanel" aria-labelledby="headingTwo">
+                <div class="panel-body">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
+                    richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck
+                    quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put
+                    a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh
+                    helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur
+                    butcher vice lomo. Leggings occaecat craft beer farm-to-table,
+                    raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable
+                    VHS.</div>
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="headingThree">
+                <h4 class="panel-title">
+                    <a class="collapsed" role="button" data-toggle="collapse" href="#collapseThree"
+                        aria-expanded="false" aria-controls="collapseThree">
+                        Collapsible Group Item #3
+                    </a>
+                </h4>
+
+            </div>
+            <div id="collapseThree" class="panel-collapse collapse in show" role="tabpanel"
+                aria-labelledby="headingThree">
+                <div class="panel-body">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
+                    richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck
+                    quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put
+                    a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh
+                    helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur
+                    butcher vice lomo. Leggings occaecat craft beer farm-to-table,
+                    raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable
+                    VHS.</div>
+            </div>
+        </div>
+    </div>
 
     <!--========= jquery js =========-->
     <script src="assets/js/jquery-2.2.4.min.js"></script>
@@ -273,6 +340,8 @@
     <!--========= meanmenu js =========-->
     <script src="assets/js/jquery.nice-select.min.js"></script>
     <script src="assets/js/lightcase.js"></script>
+    <script src="assets/js/animate-headline.js"></script>
+    <script src="assets/js/owl.carousel.min.js"></script>
     <!--========= main js =========-->
     <script src="assets/js/main.js"></script>
 </body>
