--- a/profile-2.html
+++ b/profile-2.html
@@ -20,7 +20,8 @@
 <link rel="stylesheet" href="assets/css/font-awesome.min.css">
 <link rel="stylesheet" href="assets/css/icofont.min.css">
 <link rel="stylesheet" href="assets/css/nice-select.css">
-<link rel="stylesheet" href="assets/css/lightcase.css">
+<link rel="stylesheet" href="assets/css/animate-headline.css">
+<link rel="stylesheet" href="assets/css/owl.carousel.min.css">
 <!--====== Default css ======-->
 <link rel="stylesheet" href="assets/css/default.css">
 <!--====== style css ======-->
@@ -265,13 +266,13 @@
                             <img src="assets/images/footer-logo.png" alt="">
                         </a>
                         <div class="tagline">
-                            <h4>Join to be Expert<span>Build your career</span></h4>
+                            <h4>Join to be Expert<span>copyright &copy; 2020 UX Club Bangladesh</span></h4>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6 my-auto">
                     <div class="footer-right">
-                        <a href="tel:01743196240" class="call-button"><span>Call for Help</span> : 01743 196 240</a>
+                        <a href="tel:01743196240" class="call-button"><span>Have any question?</span> : 01743 196 240</a>
                         <a href="#" class="fb-button"><span>Join us on</span> facebook</a>
                     </div>
                 </div>
@@ -286,6 +287,8 @@
     <!--========= meanmenu js =========-->
     <script src="assets/js/jquery.nice-select.min.js"></script>
     <script src="assets/js/lightcase.js"></script>
+    <script src="assets/js/animate-headline.js"></script>
+    <script src="assets/js/owl.carousel.min.js"></script>
     <!--========= main js =========-->
     <script src="assets/js/main.js"></script>
 </body>
