--- a/inner-page-before.html
+++ b/inner-page-before.html
@@ -13,7 +13,7 @@
     <title>Site Title</title>
 
     <!--====== Favicon ======-->
-    <link rel="shortcut icon" href="assets/images/favicon.ico" type="images/x-icon" />
+    <link rel="shortcut icon" href="assets/images/favicon.png" type="images/x-icon" />
     <!--====== bootstrap css ======-->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <!--====== font-awesome css ======-->
@@ -81,7 +81,7 @@
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                            <span aria-hidden="true">&times;</span>
+                                            <span aria-hidden="true"><i class="icofont-close"></i></span>
                                         </button>
                                     </div>
                                     <div class="modal-body">
@@ -130,7 +130,7 @@
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                            <span aria-hidden="true">&times;</span>
+                                            <span aria-hidden="true"><i class="icofont-close"></i></span>
                                         </button>
                                     </div>
                                     <div class="modal-body">
@@ -234,7 +234,7 @@
                                             <div class="modal-header">
                                                 <button type="button" class="close" data-dismiss="modal"
                                                     aria-label="Close">
-                                                    <span aria-hidden="true">&times;</span>
+                                                    <span aria-hidden="true"><i class="icofont-close"></i></span>
                                                 </button>
                                             </div>
                                             <div class="modal-body">
@@ -301,7 +301,7 @@
                                                                     </div>
                                                                 </div>
                                                             </div>
-                                                            <div class="col tshirt-img">
+                                                            <div class="col tshirt-img my-auto">
                                                                 <img src="assets/images/offer.png" alt="">
                                                             </div>
                                                         </div>
@@ -528,7 +528,7 @@
                 </div>
                 <div class="col-lg-4 faqs">
                     <h4 class="title">Faq</h4>
-                    <div class="accordion" id="accordionExample">
+                    <div class="accordion faqs" id="accordionExample">
                         <div class="card">
                             <div class="card-header" id="headingOne">
                                 <h5 class="mb-0 subtitle">
