--- a/profile-2.html
+++ b/profile-2.html
@@ -13,7 +13,7 @@
     <title>Site Title</title>
 
 <!--====== Favicon ======-->
-<link rel="shortcut icon" href="assets/images/favicon.ico" type="images/x-icon" />
+<link rel="shortcut icon" href="assets/images/favicon.png" type="images/x-icon" />
 <!--====== bootstrap css ======-->
 <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 <!--====== font-awesome css ======-->
@@ -80,7 +80,7 @@
                                <div class="modal-content">
                                    <div class="modal-header">
                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                           <span aria-hidden="true">&times;</span>
+                                           <span aria-hidden="true"><i class="icofont-close"></i></span>
                                        </button>
                                    </div>
                                    <div class="modal-body">
@@ -129,7 +129,7 @@
                                <div class="modal-content">
                                    <div class="modal-header">
                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                           <span aria-hidden="true">&times;</span>
+                                           <span aria-hidden="true"><i class="icofont-close"></i></span>
                                        </button>
                                    </div>
                                    <div class="modal-body">
